--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,72 +1,74 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,}
+@article{kim_probabilistic_2020,
+  title = {A Probabilistic Machine Learning Approach to Scheduling Parallel Loops with {{Bayesian}} Optimization},
+  author = {Kim, Khu-rai and Kim, Youngjae and Park, Sungyong},
+  year = {2020},
+  pages = {1--1},
+  journal = {IEEE Transactions on Parallel and Distributed Systems},
+  selected = {true}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
+@article{kim_automatic_2020,
+  title = {Automatic Myocardial Segmentation in Dynamic Contrast Enhanced Perfusion {{MRI}} Using {{Monte Carlo}} Dropout in an Encoder-Decoder Convolutional Neural Network},
+  author = {Kim, Yoon-Chul and Kim, Khu Rai and Choe, Yeon Hyeon},
+  year = {2020},
+  month = mar,
+  volume = {185},
+  pages = {105150},
+  journal = {Computer Methods and Programs in Biomedicine},
+  language = {en},
+  selected = {true}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
+@article{kim_evcmr_2019,
+  title={{{EVCMR}}: {{A}} Tool for the Quantitative Evaluation and Visualization of Cardiac {{MRI}} Data},
+  shorttitle={{{EVCMR}}},
+  author={Kim, Yoon-Chul and Kim, Khu Rai and Choi, Kwanghee and Kim, Minwoo and Chung, Younjoon and Choe, Yeon Hyeon},
+  year={2019},
+  month=aug,
+  volume={111},
+  pages={103334},
+  journal={Computers in Biology and Medicine},
+  language={en},
   selected={true}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@article{kim_fast_2021,
+  title = {Fast Calculation Software for Modified {{Look}}-{{Locker}} Inversion Recovery ({{MOLLI}}) {{T1}} Mapping},
+  author = {Kim, Yoon-Chul and Kim, Khu Rai and Lee, Hyelee and Choe, Yeon Hyeon},
+  year = {2021},
+  month = dec,
+  volume = {21},
+  pages = {26},
+  abstract = {Abstract                            Background               The purpose of this study was to develop a software tool and evaluate different T1 map calculation methods in terms of computation time in cardiac magnetic resonance imaging.                                         Methods               The modified Look-Locker inversion recovery (MOLLI) sequence was used to acquire multiple inversion time (TI) images for pre- and post-contrast T1 mapping. The T1 map calculation involved pixel-wise curve fitting based on the T1 relaxation model. A variety of methods were evaluated using data from 30 subjects for computational efficiency: MRmap, python Levenberg\textendash Marquardt (LM), python reduced-dimension (RD) non-linear least square, C++ single- and multi-core LM, and C++ single- and multi-core RD.                                         Results               Median (interquartile range) computation time was 126~s (98\textendash 141) for the publicly available software MRmap, 261~s (249\textendash 282) for python LM, 77~s (74\textendash 80) for python RD, 3.4~s (3.1\textendash 3.6) for C++ multi-core LM, and 1.9~s (1.9\textendash 2.0) for C++ multi-core RD. The fastest C++ multi-core RD and the publicly available MRmap showed good agreement of myocardial T1 values, resulting in 95\% Bland\textendash Altman limits of agreement of (-\,0.83 to 0.58~ms) and (-\,6.57 to 7.36~ms) with mean differences of -\,0.13~ms and 0.39~ms, for the pre- and post-contrast, respectively.                                         Conclusion               The C++ multi-core RD was the fastest method on a regular eight-core personal computer for pre- or post-contrast T1 map calculation. The presented software tool (fT1fit) facilitated rapid T1 map and extracellular volume fraction map calculations.},
+  file = {/home/msca8h/Zotero/storage/H54N7HXH/Kim et al. - 2021 - Fast calculation software for modified Look-Locker.pdf},
+  journal = {BMC Medical Imaging},
+  language = {en},
+  number = {1},
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@inproceedings{kim_robust_2019b,
+  title = {Towards Robust Data-Driven Parallel Loop Scheduling Using {{Bayesian}} Optimization},
+  booktitle = {Proceedings of the {{IEEE International Symposium}} on {{Modeling}}, {{Analysis}}, and {{Simulation}} of {{Computer}} and {{Telecommunication Systems}}},
+  author = {Kim, Khu-rai and Kim, Youngjae and Park, Sungyong},
+  year = {2019},
+  month = oct,
+  pages = {241--248},
+  address = {{Rennes, FR}},
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{son_gpu_2021,
+  title = {A GPU Scheduling Framework to Accelerate Hyper-Parameter Optimization in Deep Learning Clusters},
+  author = {Son, Jaewon and Yoo, Yonghyuk and Kim, Khu-rai and Kim, Youngjae and Lee, Kwonyong and Park, Sungyong},
+  year = {2021},
+  month = feb,
+  volume = {10},
+  pages = {350},
+  abstract = {This paper proposes Hermes, a container-based preemptive GPU scheduling framework for accelerating hyper-parameter optimization in deep learning (DL) clusters. Hermes accelerates hyper-parameter optimization by time-sharing between DL jobs and prioritizing jobs with more promising hyper-parameter combinations. Hermes's scheduling policy is grounded on the observation that good hyper-parameter combinations converge quickly in the early phases of training. By giving higher priority to fast-converging containers, Hermes's GPU preemption mechanism can accelerate training. This enables users to find optimal hyper-parameters faster without losing the progress of a container. We have implemented Hermes over Kubernetes and compared its performance against existing scheduling frameworks. Experiments show that Hermes reduces the time for hyper-parameter optimization up to 4.04 times against previously proposed scheduling policies such as FIFO, round-robin (RR), and SLAQ, with minimal time-sharing overhead.},
+  file = {/home/msca8h/Zotero/storage/SCZ8HI74/Son et al. - 2021 - A GPU Scheduling Framework to Accelerate Hyper-Par.pdf},
+  journal = {Electronics},
+  language = {en},
+  number = {3},
 }
