--- a/_posts/2022-04-26-gp_cuda.md
+++ b/_posts/2022-04-26-gp_cuda.md
@@ -11,7 +11,7 @@ scholar:
   bibliography_template: post_bib
 ---
 
-Currently, there isn't a way to implement Gaussian processes in Julia in a way that support both GPU acceleration and differentiation.
+Currently, there isn't a way to implement Gaussian processes in Julia in a way that supports both GPU acceleration and differentiation.
 To fill the void, I implemented a very minimal package (or a snippet rather) that fills the void.
 The implementation can be found [here](https://github.com/Red-Portal/CUDAGaussianProcessesExample.jl).
 
