--- a/_posts/2022-04-26-gp_cuda.md
+++ b/_posts/2022-04-26-gp_cuda.md
@@ -12,7 +12,7 @@ scholar:
 ---
 
 Currently, there isn't a way to implement Gaussian processes in Julia in a way that supports both GPU acceleration and differentiation.
-To fill the void, I implemented a very minimal package (or a snippet rather) that fills the void.
+To fill the void, I implemented a very minimal package (or a snippet rather).
 The implementation can be found [here](https://github.com/Red-Portal/CUDAGaussianProcessesExample.jl).
 
 ## The State of Gaussian Processes in Julia
