--- a/_posts/2022-04-26-gp_cuda.md
+++ b/_posts/2022-04-26-gp_cuda.md
@@ -159,7 +159,7 @@ Test.@testset "GPU Gaussian process numerical accuracy test" begin
 end
 {% endhighlight %}
 
-### Numerical 
+### Computational Performance
 In terms of performance, here is a execution time comparison:
 <div class="center">
 {% include figure.html path="assets/img/gp_cuda_scaling.png" class="img-fluid rounded z-depth-1" %}
