--- a/_posts/2022-04-26-gp_cuda.md
+++ b/_posts/2022-04-26-gp_cuda.md
@@ -66,7 +66,7 @@ where `SE ARD` and `Matern 5/2` stand for the squared-exponential and Matern 5/2
 We have $$D + 2$$ hyperparameters here: the $$D$$ ARD length scales, the noise variance $$\epsilon^2$$, and the function variance $$\sigma^2$$.
 
 ### Likelihood
-The (non-marginal) log density of a Gaussian process function is
+The log likelihood of a Gaussian process prior is
 \begin{equation}
 	\log p\left(\mathbf{y} \mid \mathbf{X}, \mathbf{\theta} \right) = -\frac{1}{2}\mathbf{y}^{\top} \mathbf{K^{-1}} \mathbf{y} - \frac{1}{2} \log \mathrm{det} \mathbf{K} - \frac{N}{2} \log 2 \pi.
 \end{equation}
