--- a/_posts/2022-04-26-gp_cuda.md
+++ b/_posts/2022-04-26-gp_cuda.md
@@ -99,7 +99,7 @@ You can use the squared exponential kernel by swapping `matern52_gpu` into `se_g
 The other routines are self-contained in `gpu_cuda_utils.jl`.
 
 ### Hyperparameter Gradients 
-For the gradients, the GPML {% cite rasmussen_gaussian_2006 --file references %} book shows how to differentiate this expression.
+For the gradients, the GPML {% cite rasmussen_gaussian_2006 --file references %} book shows how to differentiate the log likelihood.
 For the record, the gradients for the kernel hypeparameters are
 $$
 \begin{align}
