--- a/_posts/2022-04-26-gp_cuda.md
+++ b/_posts/2022-04-26-gp_cuda.md
@@ -120,7 +120,7 @@ $$
 	\mathbf{y}^{\top} \, \mathbf{K}^{-1} \frac{\partial \mathbf{K}}{\partial \ell^2} \mathbf{K}^{-1} \, \mathbf{y} - \mathrm{tr}\left( \mathbf{K}^{-1} \frac{\partial \mathbf{K}}{\partial \ell^2} \right),
 \end{align}
 $$
-where, clearly, there is a lot of opportunities for reuse.
+where, clearly, there is lots of opportunities for reuse.
 Therefore, writing our own gradients should be far more efficient for GPs both in terms of time and memory.
 
 You can compute the gradients using `Zygote` as
