--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,9 @@
   pages = {1--1},
   journal = {IEEE Transactions on Parallel and Distributed Systems},
   selected = {true},
-  html = {https://www.researchgate.net/publication/344295850_A_Probabilistic_Machine_Learning_Approach_to_Scheduling_Parallel_Loops_with_Bayesian_Optimization}
+  teaser = {/assets/img/teasers/bofss_system.png},
+  code = {https://github.com/Red-Portal/bosched},
+  link = {https://www.researchgate.net/publication/344295850_A_Probabilistic_Machine_Learning_Approach_to_Scheduling_Parallel_Loops_with_Bayesian_Optimization}
 }
 
 @article{kim_automatic_2020,
@@ -20,7 +22,8 @@
   journal = {Computer Methods and Programs in Biomedicine},
   language = {en},
   selected = {true},
-  html = {https://www.researchgate.net/publication/336731977_Automatic_myocardial_segmentation_in_dynamic_contrast_enhanced_perfusion_MRI_using_Monte_Carlo_dropout_in_an_encoder-decoder_convolutional_neural_network}
+  teaser = {/assets/img/teasers/perfusion_mri_mc.png},
+  link = {https://www.researchgate.net/publication/336731977_Automatic_myocardial_segmentation_in_dynamic_contrast_enhanced_perfusion_MRI_using_Monte_Carlo_dropout_in_an_encoder-decoder_convolutional_neural_network}
 }
 
 @article{kim_evcmr_2019,
@@ -33,7 +36,8 @@
   journal={Computers in Biology and Medicine},
   language={en},
   selected={true},
-  html = {https://www.researchgate.net/publication/333869321_EVCMR_A_tool_for_the_quantitative_evaluation_and_visualization_of_cardiac_MRI_data}
+  teaser = {/assets/img/teasers/cardiac_analysis.png},
+  link = {https://www.researchgate.net/publication/333869321_EVCMR_A_tool_for_the_quantitative_evaluation_and_visualization_of_cardiac_MRI_data}
 }
 
 @article{kim_fast_2021,
@@ -47,7 +51,8 @@
   journal = {BMC Medical Imaging},
   language = {en},
   number = {1},
-  html = {https://www.researchgate.net/publication/349267167_Fast_calculation_software_for_modified_Look-Locker_inversion_recovery_MOLLI_T1_mapping}
+  teaser = {/assets/img/teasers/t1_mapping.png},
+  link = {https://www.researchgate.net/publication/349267167_Fast_calculation_software_for_modified_Look-Locker_inversion_recovery_MOLLI_T1_mapping}
 }
 
 @inproceedings{kim_robust_2019b,
@@ -57,7 +62,8 @@
   year = {2019},
   pages = {241--248},
   address = {{Rennes, FR}},
-  html = {https://www.researchgate.net/publication/334881528_Towards_Robust_Data-Driven_Parallel_Loop_Scheduling_Using_Bayesian_Optimization}
+  code = {https://github.com/Red-Portal/bosched},
+  link = {https://www.researchgate.net/publication/334881528_Towards_Robust_Data-Driven_Parallel_Loop_Scheduling_Using_Bayesian_Optimization}
 }
 
 @article{son_gpu_2021,
@@ -71,5 +77,6 @@
   journal = {Electronics},
   language = {en},
   number = {3},
-  html = {https://www.researchgate.net/publication/348980534_A_GPU_Scheduling_Framework_to_Accelerate_Hyper-Parameter_Optimization_in_Deep_Learning_Clusters}
+  teaser = {/assets/img/teasers/hermes.png},
+  link = {https://www.researchgate.net/publication/348980534_A_GPU_Scheduling_Framework_to_Accelerate_Hyper-Parameter_Optimization_in_Deep_Learning_Clusters}
 }
