update on GP CUDA progress

--- a/_posts/2022-04-26-gp_cuda.md
+++ b/_posts/2022-04-26-gp_cuda.md
@@ -5,7 +5,7 @@ date: 2022-04-26
 description: 
 tags: GP CUDA
 categories: GP
-comments: true
+#comments: true
 scholar: 
   bibliography: references.bib
   bibliography_template: post_bib
@@ -71,7 +71,7 @@ The log likelihood of a Gaussian process prior is
 	\log p\left(\mathbf{y} \mid \mathbf{X}, \mathbf{\theta} \right) = -\frac{1}{2}\mathbf{y}^{\top} \mathbf{K^{-1}} \mathbf{y} - \frac{1}{2} \log \mathrm{det} \mathbf{K} - \frac{N}{2} \log 2 \pi.
 \end{equation}
 This is implemented as
-{% highlight julia linenos %}
+{% highlight julia %}
 function gp_likelihood(
     X_dev::CUDA.CuArray{<:Real,2},
     y_dev::CUDA.CuArray{<:Real,1},
@@ -124,7 +124,7 @@ where, clearly, there is lots of opportunities for reuse.
 Therefore, writing our own gradients should be far more efficient for GPs both in terms of time and memory.
 
 You can compute the gradients using `Zygote` as
-{% highlight julia linenos %}
+{% highlight julia %}
 likelihood_gpu(X_dev, θ) = begin
     N  = size(X_dev, 2)
     ℓσ = θ[1]
@@ -146,7 +146,7 @@ To get proper performance measurements, I turned off frequency scaling and pause
 
 ### Numerical Accuracy
 In terms of numerical accuracy, the GPU version is close to the result of `AbstractGPs` at 1e-4 tolerance level:
-{% highlight julia linenos %}
+{% highlight julia %}
 Test.@testset "GPU Gaussian process numerical accuracy test" begin
     N     = 128
     D     = 16
@@ -162,7 +162,7 @@ end
 ### Computational Performance
 In terms of performance, here is a execution time comparison:
 <div class="center">
-{% include figure.html path="assets/img/gp_cuda_scaling.png" class="img-fluid rounded z-depth-1" %}
+{% include figure.html path="assets/img/gp_cuda_scaling.png" class="img-fluid rounded z-depth-1" zoomable=true %}
 </div>
 The error bars are the 80% empirical quantiles and $$N$$ is the number of datapoints.
 We can see that GPUs quickly becomes more efficient for $$N>100$$.
@@ -190,10 +190,14 @@ When the Cholesky fails, the current implementation does not throw.
 Instead, it spits a `-Inf` for the likelihood and `CUDA.zeros` arrays for the gradients.
 
 ### Fixing Zygote for Differentiating `Cholesky` with CUDA
+
+**Update: this has been [fixed ](https://github.com/JuliaDiff/ChainRules.jl/pull/630) by [sethaxen](https://github.com/sethaxen).**
+**See also the issues at [ChainRules.jl](https://github.com/JuliaDiff/ChainRules.jl/issues/629), [Zygote.jl](https://github.com/FluxML/Zygote.jl/issues/1210)**
+
 While doing this, I ran into a bug that prevents `Cholesky` being differentiated by `Zygote`, which I [reported](https://github.com/FluxML/Zygote.jl/issues/1210).
 A quick fix is to use the following snippet:
 
-{% highlight julia linenos %}
+{% highlight julia %}
 @eval Zygote begin
     import CUDA
     @adjoint function cholesky(Σ::CUDA.CuArray; check = true)
@@ -217,13 +221,14 @@ A quick fix is to use the following snippet:
 end
 {% endhighlight %}
 
+**Update: this has been [fixed](https://github.com/JuliaGPU/CUDA.jl/pull/1538) by myself** <br>
 The weird part of my solution here is the two calls to `triu`, which [create](https://docs.julialang.org/en/v1/stdlib/LinearAlgebra/#LinearAlgebra.triu) a normal `Matrix` that is upper triangular, in contrast to the `UpperTriangular` adaptor.
 This is necessary because, currently, multiplying two `UpperTriangular` matrices on the GPU is extremely slow.
 Running the profiler seems to show that there is a weird device memory copy somewhere that takes forever, but I didn't pursue the matter further.
 
 ### System Information
 
-{% highlight julia linenos %}
+{% highlight julia %}
 julia> versioninfo()
 Julia Version 1.7.2
 Commit bf53498635 (2022-02-06 15:21 UTC)
@@ -237,7 +242,7 @@ Environment:
   JULIA_NUM_THREADS = 8
 {% endhighlight %}
 
-{% highlight julia linenos %}
+{% highlight julia %}
 julia> CUDA.versioninfo()
 CUDA toolkit 11.6, artifact installation
 NVIDIA driver 510.60.2, for CUDA 11.6
@@ -257,3 +262,11 @@ Libraries:
 References
 ----------
 {% bibliography --cited %}
+
+<script src="https://utteranc.es/client.js"
+        repo="Red-Portal/red-portal.github.io"
+        issue-term="title"
+        theme="preferred-color-scheme"
+        crossorigin="anonymous"
+        async>
+</script>
